force-app/main/default/objects/CCP_Pricing_Supplier_Conversion_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Supplier_Conversion_Rate__c</fullName>
        <label>Existing Supplier Conversion Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Existing_Supplier_Percent__c</fullName>
        <label>Existing Supplier Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Supplier_Conversion_Rate__c</fullName>
        <label>New Supplier Conversion Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_Supplier_Percent__c</fullName>
        <label>New Supplier Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opp_Type__c</fullName>
        <label>Opp Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CCP Pricing Supplier Conversion Rate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CCP Pricing Supplier Conversion Rate</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCP Pricing Supplier Conversion Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>